--- a/config/two.ssc.ctrl.bq.step.tsr.yaml
+++ b/config/two.ssc.ctrl.bq.step.tsr.yaml
@@ -8,19 +8,19 @@ ssc:
   yaw_angles:
     - 290.
     - 270.
-#  type: series
-#  yaw_series:
-#      - [0., 290, 270.]
-#      - [59., 250, 270.]
-  type: gradient_step # [fixed; series; gradient_step]
-  prediction_horizon: 20.
-  control_horizon: 1.
-  transient_time: 120.
-  objective: tracking # [tracking; maximisation]
-  power_reference:  #MW
-    - [  0., 6.1]
-    - [999., 7.1]
-  plant: cm # [cm; sowfa] if sowfa: convert tsr to torque with tsr tracker
+  type: series
+  yaw_series:
+    - [0., 270., 270.]
+    - [1000., 270., 270.]
+  pitch_series:
+    - [0., 0., 0.]
+    - [1000., 0.,0.]
+  torque_series: # tsr
+    - [0., 8., 8.]
+    - [299.9, 8., 8.]
+    - [300., 10., 8.]
+    - [1000., 10., 8.]
+  plant: sowfa # [cm; sowfa] if sowfa: convert tsr to torque with tsr tracker
   sowfa_time_step: 0.2
 
 simulation:
