--- a/config/two.ssc.sim.bq.yaml
+++ b/config/two.ssc.sim.bq.yaml
@@ -3,7 +3,7 @@ mode: simulation
 simulation:
   name: two.ssc.sim
   is_dynamic: True
-  total_time: 999. # s
+  total_time: 59. # s
   time_step: 1. # s
   dimensions: 2 # -
   save_logs: False
@@ -35,12 +35,21 @@ wind_farm:
     - 270.
     - 270.
   farm_controller:
-    yaw_control_type: external
-    axial_induction_control_type: none
-    pitch_control_type: external
-    torque_control_type: external
-    port: 1652
     control_discretisation: 1.
+    controls:
+      yaw:
+        type: external
+      pitch:
+        type: external
+      torque:
+        type: external
+    external_controller:
+      port: 1652
+      controls:
+        - torque
+        - yaw
+        - pitch
+
 
 turbine:
   axial_induction: 0.33
