--- a/config/two.ssc.ctrl.bq.yaml
+++ b/config/two.ssc.ctrl.bq.yaml
@@ -5,19 +5,30 @@ ssc:
   control_discretisation: 1.
   mode: pitch_torque # [induction; pitch_torque]
 #  type: fixed
-  yaw_angles:
-    - 290.
-    - 270.
-  type: series
-  yaw_series:
-    - [0., 290, 270.]
-    - [59., 250, 270.]
-  pitch_series:
-    - [0., 0., 3.]
-    - [60., 3., 0.]
-  torque_series:
-    - [0., 8., 8.]
-    - [60, 7., 9.]
+  controls:
+    yaw:
+      type: fixed
+      values: [260., 275.]
+    pitch:
+      type: fixed
+      values: [0., 3.]
+    torque:
+      type: fixed
+      values: [8., 9.]
+
+#  yaw_angles:
+#    - 290.
+#    - 270.
+#  type: series
+#  yaw_series:
+#    - [0., 290, 270.]
+#    - [59., 250, 270.]
+#  pitch_series:
+#    - [0., 0., 3.]
+#    - [60., 3., 0.]
+#  torque_series:
+#    - [0., 8., 8.]
+#    - [60, 7., 9.]
 #  type: gradient_step # [fixed; series; gradient_step]
 #  prediction_horizon: 20.
 #  control_horizon: 1.
