Implement gradient step control with ControlParameter class

--- a/config/two.ssc.ctrl.bq.yaml
+++ b/config/two.ssc.ctrl.bq.yaml
@@ -2,24 +2,30 @@ mode: supercontroller
 
 ssc:
   port: 1652
+  external_controls:
+    - torque
+    - yaw
+    - pitch
   control_discretisation: 1.
   mode: pitch_torque # [induction; pitch_torque]
 #  type: fixed
   controls:
     yaw:
-      type: series
+      type: gradient_step
       values:
-        - [0., 260., 275.]
-        - [60., 270., 255.]
+        - [0., 280., 270.]
+        - [60., 280., 270.]
     pitch:
-      type: series
+      type: gradient_step
       values:
-        - [0., 0., 3.]
-        - [60., 3., 0.]
+        - [0., 0., 0.]
+        - [60., 0., 0.]
     torque:
-      type: fixed
-      values: [8., 9.]
-
+      type: gradient_step
+      values:
+        - [0., 8., 8.]
+        - [60., 8., 8.]
+  transient_time: 120.
 #  yaw_angles:
 #    - 290.
 #    - 270.
@@ -34,8 +40,8 @@ ssc:
 #    - [0., 8., 8.]
 #    - [60, 7., 9.]
 #  type: gradient_step # [fixed; series; gradient_step]
-#  prediction_horizon: 20.
-#  control_horizon: 1.
+  prediction_horizon: 20.
+  control_horizon: 1.
 #  transient_time: 120.
 #  objective: tracking # [tracking; maximisation]
 #  power_reference:  #MW
@@ -86,17 +92,17 @@ wind_farm:
       yaw:
         type: series
         values:
-          - [0, 290., 270.]
-          - [0, 270., 270.]
+          - [0, 280., 270.]
+          - [10, 280., 270.]
       pitch:
         type: series
         values:
           - [0., 0., 0.]
-          - [10., 5., 5.]
+          - [10., 0.,0.]
       torque:
         type: series
         values:
-          - [0., 10., 10.]
+          - [0., 8., 8.]
           - [10., 8., 8.]
 
 turbine:
