Fix step test set-up

--- a/config/two.ssc.ctrl.bq.step.yaw.yaml
+++ b/config/two.ssc.ctrl.bq.step.yaw.yaml
@@ -27,7 +27,7 @@ ssc:
         - [1000., 290., 270.]
       rate_limit: 0.3
     pitch:
-      type: gradient_step
+      type: series
       values:
         - [0., 0., 0.]
         - [1000., 0., 0.]
