--- a/config/two.ssc.ctrl.bq.step.tsr.yaml
+++ b/config/two.ssc.ctrl.bq.step.tsr.yaml
@@ -25,7 +25,7 @@ ssc:
         - [1000., 270., 270.]
       rate_limit: 0.3
     pitch:
-      type: gradient_step
+      type: series
       values:
         - [0., 0., 0.]
         - [1000., 0., 0.]
