--- a/config/two.ssc.ctrl.bq.step.yaw.yaml
+++ b/config/two.ssc.ctrl.bq.step.yaw.yaml
@@ -22,15 +22,15 @@ ssc:
       type: series
       values:
         - [0., 270., 270.]
-        - [299.9, 270., 270.]
-        - [300., 290., 270.]
+        - [199.9, 270., 270.]
+        - [200., 290., 270.]
         - [1000., 290., 270.]
       rate_limit: 0.3
     pitch:
       type: series
       values:
-        - [0., 0., 0.]
-        - [1000., 0., 0.]
+        - [0., 0.75, 0.75]
+        - [1000., 0.75, 0.75]
       rate_limit: 1.
       range: [-1., 25.]
     torque:
@@ -44,11 +44,11 @@ ssc:
   prediction_horizon: 20.
   control_horizon: 1.
 #  objective: tracking # [tracking; maximisation]
-  plant: sowfa # [cm; sowfa] if sowfa: convert tsr to torque with tsr tracker
+  plant: cm # [cm; sowfa] if sowfa: convert tsr to torque with tsr tracker
   sowfa_time_step: 0.2
 
 simulation:
-  name: two.ssc.ctrl
+  name: two.ssc.ctrl.step.yaw
   is_dynamic: True
   total_time: -1 # s
   time_step: 1. # s
