--- a/config/farmconners/fc.A4.9WT.yaml
+++ b/config/farmconners/fc.A4.9WT.yaml
@@ -20,14 +20,14 @@ flow:
   wake_mixing_offset: 3.0 # D
   wake_mixing_ml_max: 25 # m
   density: 1.2 # kg.m^-3
-  continuity_correction: none # none, wfsim, (general)
+  continuity_correction: wfsim_gen # none, wfsim, (general)
   finite_element: MINI # TH, MINI
 
 wind_farm:
   size: [5000,5000]
-  cells: [50, 50]
-  do_refine_turbines: 2 # n refinements
-  refine_radius: 100. # m
+  cells: [25, 25]
+  do_refine_turbines: 3 # n refinements
+  refine_radius: 200. # m
   positions: # [x, y] m
     - [2143.3,  378.2]
     - [3025.9, 1260.8]
@@ -61,7 +61,7 @@ turbine:
   hub_height: 119.0 # m
   kernel: gaussian # king, gaussian
   force_scale_axial: 1
-  force_scale_transverse: 1.
+  force_scale_transverse: 3.
   power_scale: 1
   yaw_rate_limit: 0.3
   coefficients: induction
