--- a/config/3d.1wt.hpc.yaml
+++ b/config/3d.1wt.hpc.yaml
@@ -1,14 +1,14 @@
 mode: simulation
 
 simulation:
-  name: 3d.1wt.hpc.v2
+  name: 3d.1wt.dyn
   is_dynamic: True
-  total_time: 600. # s
-  time_step: 1. # s
+  total_time: 1000. # s
+  time_step: 0.5 # s
   # set dimensions to three
   dimensions: 3 # -
   save_logs: True
-  write_time_step: 10.0
+  write_time_step: 1.0
 
 flow:
   type: "steady"
@@ -27,19 +27,28 @@ flow:
 
 wind_farm:
   # adjust size and cells to dim=3
-  size: [1000,500,500]
-  cells: [40, 20, 20]
+  size: [2000,1000,500]
+  cells: [80, 40, 20]
   do_refine_turbines: 1 # n refinements
   refine_radius: 200. # m
   positions: # [x, y] m
-    - [300, 250]
+    - [500,500]
   yaw_angles: # [gamma] deg
     - 290.
   farm_controller:
     control_discretisation: 1.
     controls:
       yaw:
-        type: fixed
+        type: series
+        values:
+          - [0., 270.]
+          - [199.9, 270.]
+          - [200.0, 300.]
+          - [499.9, 300.]
+          - [500.0, 285.]
+          - [699.9, 285.]
+          - [700.0, 270.]
+          - [899.90, 270.]
 
 turbine:
   axial_induction: 0.33
